Adding a hover effect to the navigation bar and link to favourite scripture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/mosesette">Linkedin</a></li>
                 <li><a href="#">Canvas</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/34?lang=eng">Scriptures</a></li>
                 <li><a href="#">Final Project</a></li>
             </ul>
         </nav>
