--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/mosesette">Linkedin</a></li>
-                <li><a href="#">Canvas</a></li>
+                <li><a href="https://byupw.instructure.com/courses/">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/34?lang=eng">Scriptures</a></li>
                 <li><a href="#">Final Project</a></li>
             </ul>
