--- a/temples.html
+++ b/temples.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Moses Ette">
     <meta http-equiv="refresh" content="2000"> 
-    <script src="../scripts/temples.js" defer></script>
-    <script src="../scripts/getdates.js" defer></script>
+    <script src="../WDD131/scripts/temples.js" defer></script>
+    <script src="../WDD131/scripts/getdates.js" defer></script>
     <title>Temples</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/temples.css">
-    <link rel="stylesheet" href="../styles/temple-large.css">
+    <link rel="stylesheet" href="../WDD131/styles/temples.css">
+    <link rel="stylesheet" href="../WDD131/styles/temple-large.css">
 </head>
 <body>
     <header>
