--- a/temples.html
+++ b/temples.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Moses Ette">
     <meta http-equiv="refresh" content="2000"> 
-    <script src="../WDD131/scripts/temples.js" defer></script>
-    <script src="../WDD131/scripts/getdates.js" defer></script>
+    <script src="/scripts/temples.js" defer></script>
+    <script src="/scripts/getdates.js" defer></script>
     <title>Temples</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +35,7 @@
     
     <main>
         <h1>The Holy House of The Lord</h1>
-        <figure><img src="../images/duban-south-africa-temple.png" alt="Duban, South Africa LDS Temple" sizes="" srcset="" title="Duban, South Africa Temple"><figcaption>Duban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
+        <figure><img src="/images/duban-south-africa-temple.png" alt="Duban, South Africa LDS Temple" sizes="" srcset="" title="Duban, South Africa Temple"><figcaption>Duban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
         <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
         <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
         <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
