still fixing styles

--- a/temples.html
+++ b/temples.html
@@ -10,9 +10,9 @@
     <title>Temples</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temple-large.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="styles/temples.css" type="text/css">
+    <link rel="stylesheet" href="styles/temple-large.css" type="text/css">
 </head>
 <body>
     <header>
