--- a/temples.html
+++ b/temples.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Moses Ette">
-    <meta http-equiv="refresh" content="2000"> 
     <script src="scripts/temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
-    <title>Temples</title>
+    <title>Temples Album</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" type="text/css">
