--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Moses Ette">
+    <meta name="description" content="The Photo Album of the modern day prophets of the world in this last dispensation">
     <script src="scripts/temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
     <title>Temples Album</title>
