--- a/temples.html
+++ b/temples.html
@@ -40,16 +40,16 @@
 
     <main>
         <h2>The Holy House of The Lord</h2>
-        <figure><img src="images/duban-south-africa-temple.png" alt="Duban, South Africa LDS Temple" sizes="" srcset="" title="Duban, South Africa Temple"><figcaption>Duban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
-        <figure><img src="" alt="" sizes="" srcset=""><figcaption></figcaption></figure>
+        <figure><img src="images/duban-south-africa-temple.png" alt="Duban, South Africa LDS Temple" title="Duban, South Africa Temple"><figcaption>Duban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
+        <figure><img src="images/tucson-arizona-temple.png" alt="Tucson Arizona Temple" title="Tucson Arizona Temple"><figcaption>Tucson Arizona Temple</figcaption></figure>
+        <figure><img src="images/joanesburg-south-africa-temple.png" alt="Joanesburg south Africa Temple" ><figcaption>Joanesburg south Africa Temple</figcaption></figure>
+        <figure><img src="images/mesa-arizona-temple.png" alt="Mesa Arizona Temple" title="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
+        <figure><img src="images/aba-temple.png" alt="Aba Nigeria Temple" title="Aba Nigeria Temple"><figcaption>Aba Nigeria Temple</figcaption></figure>
+        <figure><img src="images/phoeniz-arizona-temple.png" alt="Phoenix Arizona Temple" title="Phoenix Arizona Temple"><figcaption>Phoenix Arizona Temple</figcaption></figure>
+        <figure><img src="images/utah-temple.png" alt="Utah Temple" title="Utah Temple" ><figcaption></figcaption></figure>
+        <figure><img src="images/oquirrh.png" alt="oquirrh temple" title="Oquirrh"><figcaption>Oquirrh Temple</figcaption></figure>
+        <figure><img src="images/new-layton-temple.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
+        <figure><img src="images/ogden.png" alt="Ogden Temple" title="Ogden"><figcaption>Odgen Temple</figcaption></figure>
     </main>
     <footer>
         <p><span id="currentYear">&copy; </span></p>
