--- a/temples.html
+++ b/temples.html
@@ -46,10 +46,10 @@
         <figure><img src="images/mesa-arizona-temple.png" alt="Mesa Arizona Temple" title="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
         <figure><img src="images/aba-temple.png" alt="Aba Nigeria Temple" title="Aba Nigeria Temple"><figcaption>Aba Nigeria Temple</figcaption></figure>
         <figure><img src="images/phoeniz-arizona-temple.png" alt="Phoenix Arizona Temple" title="Phoenix Arizona Temple"><figcaption>Phoenix Arizona Temple</figcaption></figure>
-        <figure><img src="images/utah-temple.png" alt="Utah Temple" title="Utah Temple" ><figcaption>Utah Temple</figcaption></figure>
-        <figure><img src="images/oquirrh.png" alt="oquirrh temple" title="Oquirrh"><figcaption>Oquirrh Temple</figcaption></figure>
-        <figure><img src="images/new-layton-temple.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
-        <figure><img src="images/ogden.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
+        <figure><img src="images/1x/Asset 3.png" alt="Utah Temple" title="Utah Temple" ><figcaption>Utah Temple</figcaption></figure>
+        <figure><img src="images/oquirrh1.png" alt="Oquirrh Temple" title="Oquirrh"><figcaption>Oquirrh Temple</figcaption></figure>
+        <figure><img src="images/1x/new-layton.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
+        <figure><img src="images/ogden-temple1.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
     </main>
     <footer>
         <p><span id="currentYear">&copy; </span></p>
