--- a/temples.html
+++ b/temples.html
@@ -48,8 +48,8 @@
         <figure><img src="images/phoeniz-arizona-temple.png" alt="Phoenix Arizona Temple" title="Phoenix Arizona Temple"><figcaption>Phoenix Arizona Temple</figcaption></figure>
         <figure><img src="images/1x/Asset 3.png" alt="Utah Temple" title="Utah Temple" ><figcaption>Utah Temple</figcaption></figure>
         <figure><img src="images/oquirrh1.png" alt="Oquirrh Temple" title="Oquirrh"><figcaption>Oquirrh Temple</figcaption></figure>
-        <figure><img src="images/1x/new-layton.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
-        <figure><img src="images/ogden-temple1.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
+        <figure><img src="images/1x/new-layton2.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
+        <figure><img src="images/ogden2.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
     </main>
     <footer>
         <p><span id="currentYear">&copy; </span></p>
