--- a/temples.html
+++ b/temples.html
@@ -40,16 +40,16 @@
 
     <main>
         <h2> The Holy House of The Lord </h2>
-        <figure><img src="images/duban-south-africa-temple.png" alt="Durban, South Africa LDS Temple" title="Durban, South Africa Temple"><figcaption>Durban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
+        <figure><img src="images/duban-temple.png" alt="Durban, South Africa LDS Temple" title="Durban, South Africa Temple"><figcaption>Durban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
         <figure><img src="images/tucson-arizona-temple.png" alt="Tucson Arizona Temple" title="Tucson Arizona Temple"><figcaption>Tucson Arizona Temple</figcaption></figure>
         <figure><img src="images/joanesburg-temple.png" alt="Johannesburg south Africa Temple" ><figcaption>Johannesburg south Africa Temple</figcaption></figure>
         <figure><img src="images/mesa-arizona-temple.png" alt="Mesa Arizona Temple" title="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
         <figure><img src="images/aba-temple.png" alt="Aba Nigeria Temple" title="Aba Nigeria Temple"><figcaption>Aba Nigeria Temple</figcaption></figure>
         <figure><img src="images/phoeniz-arizona-temple.png" alt="Phoenix Arizona Temple" title="Phoenix Arizona Temple"><figcaption>Phoenix Arizona Temple</figcaption></figure>
-        <figure><img src="images/1x/Asset 3.png" alt="Utah Temple" title="Utah Temple" ><figcaption>Utah Temple</figcaption></figure>
+        <figure><img src="images/1x/asset2.png" alt="Utah Temple" title="Utah Temple" ><figcaption>Utah Temple</figcaption></figure>
         <figure><img src="images/oquirrh1.png" alt="Oquirrh Temple" title="Oquirrh"><figcaption>Oquirrh Temple</figcaption></figure>
         <figure><img src="images/1x/new-layton2.png" alt="New Layton Temple" ><figcaption>New Layton Temple</figcaption></figure>
-        <figure><img src="images/ogden2.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
+        <figure><img src="images/ogden4.png" alt="Ogden Temple" title="Ogden"><figcaption>Ogden Temple</figcaption></figure>
     </main>
     <footer>
         <p><span id="currentYear">&copy; </span></p>
