--- a/temples.html
+++ b/temples.html
@@ -40,7 +40,7 @@
 
     <main>
         <h2> The Holy House of The Lord </h2>
-        <figure><img src="images/duban-temple.png" alt="Durban, South Africa LDS Temple" title="Durban, South Africa Temple"><figcaption>Durban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
+        <figure><img src="images/durban-temple.png" alt="Durban, South Africa LDS Temple" title="Durban, South Africa Temple"><figcaption>Durban, South Africa Temple of the Church of Jesus Christ of Latter-day Saint</figcaption></figure>
         <figure><img src="images/tucson-arizona-temple.png" alt="Tucson Arizona Temple" title="Tucson Arizona Temple"><figcaption>Tucson Arizona Temple</figcaption></figure>
         <figure><img src="images/joanesburg-temple.png" alt="Johannesburg south Africa Temple" ><figcaption>Johannesburg south Africa Temple</figcaption></figure>
         <figure><img src="images/mesa-arizona-temple.png" alt="Mesa Arizona Temple" title="Mesa Arizona Temple"><figcaption>Mesa Arizona Temple</figcaption></figure>
