--- a/temples.html
+++ b/temples.html
@@ -30,7 +30,7 @@
             </button>
             <ul class="display show">
                 <li> <a href="#" target="_blank" rel="noopener noreferrer">Home</a></li>
-                <li><a href="http://" target="_blank" rel="noopener noreferrer">New</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">New</a></li>
                 <li><a href="#" target="_blank" rel="noopener noreferrer">Old</a></li>
                 <li><a href="#" target="_blank" rel="noopener noreferrer">Large</a></li>
                 <li><a href="#" target="_blank" rel="noopener noreferrer">Small</a></li>
